Add spock test and Stream