@@ -21,9 +21,11 @@ import com.mongodb.BasicDBObject;
 import com.mongodb.DB;
 import com.mongodb.DBCollection;
 import com.mongodb.DBObject;
-import sun.misc.BASE64Encoder;
+
+
 
 import java.security.SecureRandom;
+import java.util.Base64;
 
 public class SessionDAO {
     private final DBCollection sessionsCollection;
@@ -53,9 +55,9 @@ public class SessionDAO {
         byte randomBytes[] = new byte[32];
         generator.nextBytes(randomBytes);
 
-        BASE64Encoder encoder = new BASE64Encoder();
+        Base64.Encoder encoder = Base64.getEncoder();
 
-        String sessionID = encoder.encode(randomBytes);
+        String sessionID = encoder.encodeToString(randomBytes);
 
         // build the BSON object
         BasicDBObject session = new BasicDBObject("username", username);
